--- a/adsocial/templates/base.html
+++ b/adsocial/templates/base.html
@@ -25,21 +25,27 @@
       }
 
       .navbar {
-        position: static;
-        height: 70px;
-        margin-bottom: 0px;
+/*        position: static;
+        height: 70px;*/
         font-family: "Droid Sans";
         font-size: 18px;
-        box-shadow: 0 2px 3px rgba(0,0,0,0.3);
+/*        box-shadow: 0 2px 3px rgba(0,0,0,0.3);
         -webkit-box-shadow: 0 2px 3px rgba(0,0,0,0.3);
-        -moz-box-shadow: 0 2px 3px rgba(0,0,0,0.3);
+        -moz-box-shadow: 0 2px 3px rgba(0,0,0,0.3);*/
       }
 
       .footer {
         padding-top: 20px;
       }
     </style>
-    <link href="{{ STATIC_URL }}/css/bootstrap-responsive.css" rel="stylesheet">
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
+
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-theme.min.css">
+
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
     {% block css %}
     {% endblock %}
 
@@ -51,19 +57,20 @@
     <!-- Fav and touch icons -->
     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ STATIC_URL }}/ico/apple-touch-icon-144-precomposed.png">
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="{{ STATIC_URL }}/ico/apple-touch-icon-114-precomposed.png">
-      <link rel="apple-touch-icon-precomposed" sizes="72x72" href="{{ STATIC_URL }}/ico/apple-touch-icon-72-precomposed.png">
-                    <link rel="apple-touch-icon-precomposed" href="{{ STATIC_URL }}/ico/apple-touch-icon-57-precomposed.png">
-                                   <link rel="shortcut icon" href="{{ STATIC_URL }}/ico/favicon.png">
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="{{ STATIC_URL }}/ico/apple-touch-icon-72-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" href="{{ STATIC_URL }}/ico/apple-touch-icon-57-precomposed.png">
+    <link rel="shortcut icon" href="{{ STATIC_URL }}/ico/favicon.png">
 
+    <script src="{{ STATIC_URL }}/js/less.min.js" type="text/javascript"></script>
   </head>
 
   <body>
     <div class="content-container">
-        <div class="navbar navbar-fixed-top">
-            <div class="header container">
-                <h1 class="pull-left" style="color: #821E1E;">AdCactus</h1>
-                <a href="#" class="pull-right" style="position: relative; top: 28px; color: black;">Sign in</a>
-                <a href="#" class="pull-right" style="position: relative; top: 28px; right: 10px;">Browse</a>
+        <div class="header">
+            <div class="header-inner container">
+                <a href="#" class="pull-left"><img src="{{ STATIC_URL }}/img/logo.jpg" style="height: 50px;"></a>
+                <a href="#" class="pull-right" style="position: relative; top: 18px; color: black;">Sign in</a>
+                <a href="#" class="pull-right" style="position: relative; top: 18px; right: 20px;">Browse</a>
             </div>
         </div>
 
@@ -86,6 +93,5 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="{{ STATIC_URL }}/js/jquery.js"></script>
-    <script src="{{ STATIC_URL }}/js/bootstrap.js"></script>
   </body>
 </html>
