--- a/adsocial/templates/base.html
+++ b/adsocial/templates/base.html
@@ -19,19 +19,15 @@
         padding-bottom: 40px;
       }
 
-      .content {
-        width: 900px;
-        margin: 0 auto;
+      .header {
+        box-shadow: 0 2px 3px rgba(0,0,0,0.3);
+        -webkit-box-shadow: 0 2px 3px rgba(0,0,0,0.3);
+        -moz-box-shadow: 0 2px 3px rgba(0,0,0,0.3);
       }
 
-      .navbar {
-/*        position: static;
-        height: 70px;*/
+      .header-inner {
         font-family: "Droid Sans";
         font-size: 18px;
-/*        box-shadow: 0 2px 3px rgba(0,0,0,0.3);
-        -webkit-box-shadow: 0 2px 3px rgba(0,0,0,0.3);
-        -moz-box-shadow: 0 2px 3px rgba(0,0,0,0.3);*/
       }
 
       .footer {
@@ -65,7 +61,7 @@
   </head>
 
   <body>
-    <div class="content-container">
+    <div class="wrapper">
         <div class="header">
             <div class="header-inner container">
                 <a href="#" class="pull-left"><img src="{{ STATIC_URL }}/img/logo.jpg" style="height: 50px;"></a>
@@ -77,7 +73,7 @@
        {% block content-wrap %}
        {% endblock %}
 
-        <div class="content">
+        <div class="container">
 
             {% block content %}
             {% endblock %}
