--- a/adsocial/templates/main/home.html
+++ b/adsocial/templates/main/home.html
@@ -16,11 +16,21 @@
    display: block;
 }
 
+.wide-img .darken {
+   position: absolute;
+   top: 50px;
+   width: 100%;
+   height: 500px;
+   z-index: 1;
+   background-color: black;
+   opacity: 0.3;
+}
+
 #onboard-nav {
-   color: white;
+   color: #e5e5e5;
    position: relative;
    top: -400px;
-   z-index: 1;
+   z-index: 2;
 }
 
 #onboard-nav-buttons {
@@ -81,6 +91,7 @@
 {% block content-wrap %}
 <div class="wide-img">
     <img src="{{ STATIC_URL }}/img/blurred-cactus.jpg">
+    <div class="darken"></div>
 </div>
 {% endblock %}
 
